add image validation

--- a/src/languages/arabic.json
+++ b/src/languages/arabic.json
@@ -10,6 +10,7 @@
             "termsConditions": "الأحكام والشروط",
             "iAgreeTerms": "أوافق على الشروط والأحكام",
             "skip": "يتخطى",
+            "manageCards": "Manage Cards",
             "login": "تسجيل الدخول",
             "loginWithFb":"تسجيل الدخول باستخدام الفيسبوك",
             "loginWithGoogle": "تسجيل الدخول عبر جوجل",
