--- a/src/languages/english.json
+++ b/src/languages/english.json
@@ -10,6 +10,7 @@
             "termsConditions": "Terms and Conditions",
             "iAgreeTerms": "I agree with terms & conditions",
             "skip": "Skip",
+            "manageCards": "Manage Cards",
             "login": "Login",
             "loginWithFb":"Log in with Facebook",
             "loginWithGoogle": "Log in with Google",
