--- a/src/languages/english.json
+++ b/src/languages/english.json
@@ -80,7 +80,11 @@
             "confirmNewPass": "Confirm new password",
             "yourPasswordMust":"Your password must be different from previous used password",
             "verifyPhone":"Verify phone",
-            "reset": "reset"
+            "reset": "reset",
+            "flightenoPartners":"Flighteno partners with Stripe for secure payments and financial services. In order to start getting paid, you need to set up a Stripe account",
+            "youreAllSet":"You're all set",
+            "setupNow":"Setup Now",
+            "stripeRedirected": "You'll be redirected to Stripe"
         },
         "track": {
             "transactions": "Transactions",
